Fix sidebar spacing

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -70,7 +70,13 @@ ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
+
 }
+
+li {
+  margin-bottom: 16px;
+}
+
 
 a {
   text-decoration: none;
